  05 Mar 2014; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-dwh-9999.ebuild:
  Depend on 3.4 branch

  09 Feb 2014; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-dwh-9999.ebuild:
  JAVA_DIR is not used

  09 Feb 2014; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-dwh-9999.ebuild:
  remove maven leftovers

  06 Feb 2014; Alon Bar-Lev <alonbl@redhat.com> metadata.xml,
  ovirt-engine-dwh-9999.ebuild:
  switch from maven to ant per upstream

  02 Feb 2014; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-dwh-9999.ebuild:
  minor fixups

  28 Jan 2014; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-dwh-9999.ebuild:
  Add ovirt-engine as dependency

*ovirt-engine-dwh-9999 (28 Jan 2014)

  28 Jan 2014; Alon Bar-Lev <alonbl@redhat.com> +files/ovirt-engine-dwhd.init.d,
  +metadata.xml, +ovirt-engine-dwh-9999.ebuild:
  initial import